[gd_scene load_steps=9 format=2]

[ext_resource path="res://Instances/Dirt.gd" type="Script" id=1]
[ext_resource path="res://Textures/Dirt and Flowers/dirt1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Dirt and Flowers/dirt4.png" type="Texture" id=3]
[ext_resource path="res://Textures/Dirt and Flowers/dirt2.png" type="Texture" id=4]
[ext_resource path="res://Textures/Dirt and Flowers/dirt3.png" type="Texture" id=5]
[ext_resource path="res://Textures/Dirt and Flowers/dirt5.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Dirt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Budding",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "Sprouting",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Flower",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Seeds",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Dirt" type="RigidBody2D" index="0"]

position = Vector2( 32, 32 )
input_pickable = true
collision_layer = 1
collision_mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Dirt"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="Seed to Sprout" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="Sprout to Bud" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Bud to Flower" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[connection signal="input_event" from="." to="." method="_on_Dirt_input_event"]

[connection signal="timeout" from="Seed to Sprout" to="." method="_on_Seed_to_Sprout_timeout"]

[connection signal="timeout" from="Sprout to Bud" to="." method="_on_Sprout_to_Bud_timeout"]

[connection signal="timeout" from="Bud to Flower" to="." method="_on_Bud_to_Flower_timeout"]


